add user entity

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "lerna": "^8.0.2"
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "lerna": "^8.0.2",
+    "typescript": "^5.3.3"
   }
 }
