--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "class-validator": "^0.14.1",
     "lerna": "^8.0.2",
     "typescript": "^5.3.3"
   }
