--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hbdish/shared",
+  "name": "@packages/shared",
   "version": "1.0.1",
   "private": true,
   "description": "> TODO: description",
