--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
-    "@mui/icons-material": "^5.15.12",
-    "@mui/material": "^5.15.12",
+    "@mui/icons-material": "^5.15.13",
+    "@mui/material": "^5.15.13",
     "@mui/x-data-grid": "^6.19.6",
     "@mui/x-date-pickers": "^6.19.6",
     "@packages/shared": "*",
@@ -22,7 +22,10 @@
     "dayjs": "^1.11.10",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
+    "rdndmb-html5-to-touch": "^8.0.3",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
@@ -38,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "3.2.5",
+    "sass": "^1.72.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-svgr": "^4.2.0",
