--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^6.19.6",
     "@packages/shared": "*",
     "axios": "^1.6.7",
+    "date-fns": "^3.5.0",
     "dayjs": "^1.11.10",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
