--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "run:server": "cd packages/server && npm run start:dev",
+    "run:web": "cd packages/client && npm run dev"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
